--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "boxicons": "^2.1.4",
     "million": "^2.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
